# optd

./: .gitignore  .history  AGENTS.md  Cargo.toml  GOALS.md  LICENSE  README.md  SUBSTRAIT_WIP.md  TPCH_WIP.md  algo.py  algo2.py  cascades.py  ci.sh  diesel.toml  doc.md  goals.md  mac_kill_postgres.sh  populate.sql  test.sql  test2.sql  tpch-benchmark.sh  tpch.sh  tpch_diff.sh  types.md
cli/: Cargo.toml  smoke_test_cli.sh
cli/src/: auto_stats.rs  lib.rs  main.rs  udtf.rs
cli/tests/: auto_stats_tests.rs  catalog_service_integration.rs  comprehensive_table_tests.rs  create_table_tests.rs  cross_session_tests.rs  drop_table_tests.rs  eager_loading_tests.rs  error_handling_tests.rs  multi_schema_tests.rs  show_tables_tests.rs  statistics_retrieval_tests.rs  udtf_tests.rs
connectors/datafusion/: Cargo.toml
connectors/datafusion/src/: catalog.rs  extension.rs  lib.rs  optimizer.rs  planner.rs  table.rs  value.rs
connectors/datafusion/tests/: integration_test.rs  table_loading_test.rs
connectors/optd-datafusion/: Cargo.toml
connectors/optd-datafusion/src/: config.rs  explain_udfs.rs  from_df.rs  lib.rs  profiling.rs  runner.rs  setup.rs  statistics.rs  to_df.rs
connectors/optd-datafusion/tests/: slt.rs
crates/simple-graph-datafusion/: Cargo.toml
crates/simple-graph-datafusion/src/: explain_udfs.rs  from_df.rs  lib.rs  profiling.rs  runner.rs  setup.rs  to_df.rs
crates/simple-graph-datafusion/tests/: slt.rs
infra/: Cargo.toml
infra/src/: lib.rs  main.rs  query_planner.rs  test.sql
infra/src/memo/: rule.rs
infra/src/operator/: logical.rs  physical.rs
infra/src/types/: expression.rs  memo.rs  mod.rs
optd/: Cargo.toml  output.txt
optd-adaptive-demo/: Cargo.toml
optd-adaptive-demo/src/: main.rs
optd-cli/: Cargo.toml
optd-cli/examples/: generics.opt  higher_order.opt  lists.opt  logical_rules.opt  tutorial.opt
optd-cli/src/: main.rs
optd-core/: Cargo.toml  trace
optd-core/src/: cascades.rs  cost.rs  error.rs  expression.rs  heuristics.rs  lib.rs  logical_property.rs  memo.rs  nodes.rs  optimizer.rs  physical_property.rs  plan_nodes.rs  property.rs  rel_node.rs  rules.rs  test_utils.rs  tests.rs
optd-core/src/alexis_stuff/: mod.rs
optd-core/src/bridge/: from_cir.rs  into_cir.rs  mod.rs
optd-core/src/cascades/: expression.rs  expressions.rs  goal.rs  groups.rs  ir.rs  memo.rs  mod.rs  operator.rs  operators.rs  optimizer.rs  pattern.rs  patterns.rs  plan.rs  plans.rs  rule_match.rs  rules.rs  tasks.rs  tasks2.rs  types.rs  (+1 more)
optd-datafusion/: Cargo.toml  README.md
optd-datafusion-bridge/: Cargo.toml
optd-datafusion-bridge/src/: from_optd.rs  into_optd.rs  lib.rs  physical_collector.rs
optd-datafusion-repr/: Cargo.toml
optd-datafusion-repr-adv-cost/: Cargo.toml
optd-datafusion-repr-adv-cost/src/: adaptive_cost.rs  adv_cost.rs  adv_stats.rs  lib.rs
optd-datafusion-repr/src/: adaptive.rs  cost.rs  explain.rs  lib.rs  memo_ext.rs  optimizer_ext.rs  plan_nodes.rs  properties.rs  rules.rs  testing.rs  utils.rs
optd-datafusion/examples/: demo.rs
optd-datafusion/sql/: test_filter.sql  test_join.sql  test_scan.sql
optd-datafusion/src/: iceberg_conversion.rs  lib.rs  main.rs  mock.rs  optd_utils.rs  planner.rs  test.sql
optd-datafusion/tests/: run_queries.rs
optd-dsl/: Cargo.toml
optd-dsl/src/: catalog.rs  compile.rs  errors.rs  lib.rs
optd-gungnir/: Cargo.toml
optd-gungnir/src/: lib.rs  stats.rs  utils.rs
optd-perfbench/: Cargo.toml
optd-perfbench/src/: benchmark.rs  cardbench.rs  datafusion_dbms.rs  job.rs  lib.rs  main.rs  postgres_dbms.rs  shell.rs  tpch.rs  truecard.rs
optd-perfbench/tests/: cardtest_integration.rs
optd-perftest/: Cargo.toml
optd-perftest/src/: benchmark.rs  cardtest.rs  cardtest_integration.rs  cmd.rs  datafusion_db.rs  datafusion_db_cardtest.rs  datafusion_dbms.rs  job.rs  lib.rs  main.rs  postgres.rs  postgres_db.rs  postgres_dbms.rs  shell.rs  tpch.rs  tpch_constraints.sql  tpch_kit.rs  truecard.rs  truecard_cache.rs
optd-perftest/tests/: cardtest_integration.rs
optd-persistent-memo/: Cargo.toml
optd-persistent-memo/src/: backend_manager.rs  lib.rs
optd-sqllogictest/: Cargo.toml
optd-sqllogictest/slt/: _basic_tables.slt.part  _tpch_tables.slt.part  tpch-q1.slt  tpch-q10.slt  tpch-q11.slt.disabled  tpch-q12.slt  tpch-q13.slt  tpch-q14.slt  tpch-q15.slt  tpch-q16.slt  tpch-q16.slt.disabled  tpch-q17.slt  tpch-q17.slt.disabled  tpch-q18.slt.disabled  tpch-q19.slt  tpch-q2.slt.disabled  tpch-q20.slt  tpch-q21.slt.disabled  tpch-q22.slt.disabled  tpch-q3.slt  tpch-q4.slt  tpch-q5.slt  tpch-q6.slt  tpch-q7.slt  tpch-q8.slt  tpch-q9.slt  tpch-q9.slt.disabled  unnest-agg-nulls.slt  unnest-count-star.slt  unnest-dup.slt  unnest-exists-2.slt  unnest-exists-uncor.slt  unnest-exists.slt  unnest-extern-out-of-order.slt  unnest-in-exists.slt  unnest-in-uncor.slt  unnest-in.slt  unnest-not-in-uncor.slt
optd-sqllogictest/src/: lib.rs
optd-sqllogictest/tests/: harness.rs
optd-sqlplannertest/: Cargo.toml  README.md
optd-sqlplannertest/benches/: planner_bench.rs
optd-sqlplannertest/src/: bench_helper.rs  lib.rs
optd-sqlplannertest/tests/: basic_nodes.planner.sql  basic_nodes.yml  constant_predicate.planner.sql  constant_predicate.yml  cross_product.planner.sql  cross_product.yml  eliminate_duplicated_expr.planner.sql  eliminate_duplicated_expr.yml  eliminate_filter.planner.sql  eliminate_filter.yml  eliminate_limit.planner.sql  eliminate_limit.yml  empty_relation.planner.sql  empty_relation.yml  filter.planner.sql  filter.yml  join_enumerate.planner.sql  join_enumerate.yml  ok.planner.sql  ok.yml  planner_test.rs  subquery_unnesting.yml  tpch.planner.sql  tpch.yml  verbose.planner.sql  verbose.yml
optd-test/: Cargo.toml
optd-test/src/: hir.rs  lib.rs  mock.rs  utils.rs
optd/catalog/: Cargo.toml
optd/core/: Cargo.toml
optd/repository/: Cargo.toml
optd/src/: lib.rs  storage.rs  utils.rs
optd/statistics/: Cargo.toml  metadata.ducklake
optd/storage/: Cargo.toml
tests/sqllogictest/: Cargo.toml  README.md
tests/sqlplannertest/: Cargo.toml
tests/statsregtest/: Cargo.toml
(+2001 files in other folders)
