[package]
name = "optd-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.41", features = ["derive", "cargo"] }
datafusion = { workspace = true }
datafusion-cli = "49.0.0"
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "signal",
] }
dirs = "6.0.0"
regex = "1.8"
object_store = "0.12.3"
url = "2.5.4"
futures = "0.3.31"
optd-catalog = { path = "../optd/catalog", version = "0.1" }