[package]
name = "optd-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.41", features = ["derive", "cargo"] }
datafusion = { workspace = true }
datafusion-cli = "50.0.0"
optd-datafusion = { path = "../connectors/datafusion", version = "0.1" }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "signal",
] }
dirs = "6.0.0"
regex = "1.8"
object_store = "0.12.3"
url = "2.5.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = { workspace = true }
