[package]
name = "optd-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
optd = { path = "../optd" }

clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
tokio = "1.45.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
