[package]
name = "optd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
async-recursion.workspace = true
trait-variant.workspace = true
proc-macro2.workspace = true
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "migrate" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
dotenvy = "0.15"
futures = "0.3"
optd-dsl = {path="../optd-dsl"}
ordered-float = "5.0.0"
