[package]
name = "optd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
async-recursion.workspace = true
trait-variant.workspace = true
futures = "0.3"
optd-dsl = {path="../optd-dsl"}
ordered-float = "5.0.0"
