[package]
name = "optd-core"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/cmu-db/optd"

[dependencies]
optd-dsl = { path = "../optd-dsl" }

async-recursion = "1.1.1"
futures = "0.3.31"
ordered-float = "5.0.0"
tokio = { version = "1.44.2", features = ["macros", "rt", "time"] }
trait-variant = "0.1.2"
