[package]
name = "optd-datafusion-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-schema = "*"
datafusion = "32.0.0"
async-trait = "0.1"
optd-core = { path = "../optd-core" }
optd-datafusion-repr = { path = "../optd-datafusion-repr" }
anyhow = "1"
async-recursion = "1"
futures-lite = "2"
futures-util = "0.3"
tracing = "0.1"
itertools = "0.11"
