[package]
name = "optd-datafusion-bridge"
description = "datafusion bridge for optd"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "43.0.0"
datafusion-expr = "43.0.0"
async-trait = "0.1"
itertools = "0.13"
optd-core = { path = "../optd-core", version = "0.1" }
optd-datafusion-repr = { path = "../optd-datafusion-repr", version = "0.1" }
optd-datafusion-repr-adv-cost = { path = "../optd-datafusion-repr-adv-cost", version = "0.1" }
anyhow = "1"
async-recursion = "1"
futures-lite = "2"
futures-util = "0.3"
tracing = "0.1"
