[package]
name = "optd-datafusion-repr-adv-cost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow-schema = "47.0.0"
assert_approx_eq = "1.1.0"
datafusion = "32.0.0"
ordered-float = "4"
optd-datafusion-repr = { path = "../optd-datafusion-repr" }
optd-core = { path = "../optd-core" }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
itertools = "0.13"
test-case = "3.3"
tracing = "0.1"
tracing-subscriber = "0.3"
optd-gungnir = { path = "../optd-gungnir" }
serde_with = { version = "3.7.0", features = ["json"] }
