[package]
name = "optd-datafusion-repr-adv-cost"
description = "datafusion plan representation for optd"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1"
arrow-schema = "47.0.0"
assert_approx_eq = "1.1.0"
datafusion = "32.0.0"
ordered-float = "4"
optd-datafusion-repr = { path = "../optd-datafusion-repr", version = "0.1" }
optd-core = { path = "../optd-core", version = "0.1" }
serde.workspace = true
rayon = "1.10"
itertools = "0.13"
test-case = "3.3"
tracing = "0.1"
tracing-subscriber = "0.3"
optd-gungnir = { path = "../optd-gungnir", version = "0.1" }
serde_with = { version = "3.7.0", features = ["json"] }
