[package]
name = "optd-datafusion-repr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow-schema = "47.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
pretty-xmlish = "0.1"
itertools = "0.11"
optd-core = { path = "../optd-core" }
camelpaste = "0.1"
datafusion-expr = "32.0.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
union-find = { git = "https://github.com/Gun9niR/union-find-rs.git", rev = "794821514f7daefcbb8d5f38ef04e62fc18b5665" }
value-bag = { version = "1", features = ["owned"] }
