[package]
name = "optd-datafusion-repr"
description = "datafusion plan representation for optd"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow-schema = { version = "47.0.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pretty-xmlish = "0.1"
itertools = "0.13"
optd-core = { path = "../optd-core", version = "0.1" }
camelpaste = "0.1"
datafusion-expr = "32.0.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
