[package]
name = "optd-dsl"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/cmu-db/optd"

[lib]
name = "optd_dsl"
path = "src/lib.rs"

[[bin]]
name = "optd-cli"
path = "src/cli/main.rs"

[dependencies]
ariadne = "0.5.1"
async-trait = "0.1.88"
chumsky = "0.9.3"
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
enum_dispatch = "0.3.13"
futures = "0.3.31"
ordered-float = "5.0.0"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
