[package]
name = "optd-gungnir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
rand = "0.8"
crossbeam = "0.8"
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_with = {version = "3.7.0", features = ["json"]}
optd-core = { path = "../optd-core" }