[package]
name = "optd-gungnir"
description = "statistics for optd"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13"
rand = "0.8"
crossbeam = "0.8"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.7.0", features = ["json"] }
ordered-float = "4"
optd-core = { path = "../optd-core", version = "0.1.0" }
hashbrown = { version = "0.14", features = ["serde"] }
murmur2 = "0.1"
