[package]
name = "optd-perfbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { version = "43.0.0", features = [
    "avro",
    "crypto_expressions",
    "encoding_expressions",
    "regex_expressions",
    "unicode_expressions",
    "compression",
    "serde",
] }
optd-datafusion-repr = { path = "../optd-datafusion-repr" }
optd-datafusion-repr-adv-cost = { path = "../optd-datafusion-repr-adv-cost" }
optd-datafusion-bridge = { path = "../optd-datafusion-bridge" }
datafusion-optd-cli = { path = "../datafusion-optd-cli" }
futures = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
tokio = { version = "1.24", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
] }
shlex = "1.3"
tokio-postgres = "0.7"
regex = "1.10"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4.0"
prettytable-rs = "0.10"
serde = "1.0"
serde_json = "1.0"
test-case = "3.3"
rayon = "1.10"
parquet = "53.3.0"
csv2parquet = { git = "https://github.com/skyzh/arrow-tools.git", branch = "main" }

[dev-dependencies]
assert_cmd = "2.0"
