[package]
name = "optd-perftest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optd-sqlplannertest = { path = "../optd-sqlplannertest" }
futures = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
