[package]
name = "optd-perftest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { version = "32.0.0", features = [
    "avro",
    "crypto_expressions",
    "encoding_expressions",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
optd-datafusion-repr = { path = "../optd-datafusion-repr" }
optd-datafusion-bridge = { path = "../optd-datafusion-bridge" }
optd-gungnir = { path = "../optd-gungnir" }
datafusion-optd-cli = { path = "../datafusion-optd-cli" }
futures = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
tokio = { version = "1.24", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
] }
shlex = "1.3"
tokio-postgres = "0.7"
regex = "1.10"
clap = { version = "4.5", features = [
    "derive",
] }
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4.0"
tokio-util = "0.7"
futures-util = "0.3"

[dev_dependencies]
assert_cmd = "2.0"
