[package]
name = "optd-persistent-memo"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
optd-persistent = { git = "https://github.com/cmu-db/optd-experimental", branch = "main" }
optd-core = { path = "../optd-core", version = "0.1" }
sea-orm = { version = "1.1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-json",
] }
serde_json = "1.0.118"
serde.workspace = true
futures-lite.workspace = true
