[package]
name = "optd-sqlplannertest"
description = "sqlplannertest for optd"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
sqlplannertest = "0.4"
async-trait = "0.1"
datafusion-optd-cli = { path = "../datafusion-optd-cli", version = "43.0.0" }
optd-datafusion-repr-adv-cost = { path = "../optd-datafusion-repr-adv-cost", version = "0.1" }
datafusion = { version = "43.0.0", features = [
    "avro",
    "crypto_expressions",
    "encoding_expressions",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
env_logger = "0.9"
mimalloc = { version = "0.1", default-features = false }
regex = "1.8"
tokio = { version = "1.24", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
] }
optd-datafusion-bridge = { path = "../optd-datafusion-bridge", version = "0.1" }
optd-datafusion-repr = { path = "../optd-datafusion-repr", version = "0.1" }
itertools = "0.13"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
serde_yaml = "0.9"

[[test]]
name = "planner_test"
harness = false

[[bench]]
name = "planner_bench"
harness = false
