[package]
name = "optd-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
optd-core = { path = "../optd-core" }
optd-dsl = { path = "../optd-dsl" }
futures = "0.3"
tokio = { version = "1.44", features = ["rt", "macros"] }
