[package]
name = "optd-datafusion"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
datafusion = { workspace = true }
tracing = { workspace = true, features = ["log"] }
optd-core = { path = "../../optd/core", version = "0.1" }
optd-catalog = { path = "../../optd/catalog", version = "0.1" }
itertools = "0.14.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.13"
serde_json = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
