[package]
name = "optd-datafusion"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
datafusion = { workspace = true }
tracing = { workspace = true, features = ["log"] }
optd-core = { path = "../../optd/core", version = "0.1" }
itertools = { workspace = true }
async-trait = { workspace = true }
snafu = { workspace = true }
serde_json = "1"

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
