[package]
name = "optd-datafusion"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
datafusion = { workspace = true }
tracing = { workspace = true, features = ["log"] }
optd-core = { path = "../../optd/core", version = "0.1" }
optd-repository-api = { path = "../../optd/repository/api", version = "0.1" }
optd-repository-migration = { path = "../../optd/repository/migration", version = "0.1" }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

itertools = { workspace = true }
async-trait = { workspace = true }
snafu = { workspace = true }
serde_json = "1"

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
