[package]
name = "optd-datafusion"
version = "0.1.0"
edition = "2024"

[dependencies]
optd = { path = "../.." }
datafusion = "=53.1.0"
datafusion-sqllogictest = "=53.1.0"
async-trait = "0.1"
clap = { version = "4.6.1", features = ["derive"] }
rustyline = "17.0"
sqllogictest = "0.29.1"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }

[[test]]
name = "slt"
harness = false
