[package]
name = "simple-graph-datafusion"
version = "0.1.0"
edition = "2024"

[dependencies]
simple-graph = { path = "../.." }
datafusion = "=53.1.0"
datafusion-sqllogictest = "=53.1.0"
async-trait = "0.1"
sqllogictest = "0.29.1"
tpchgen = "2.0.2"
tempfile = "3"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }

[[test]]
name = "slt"
harness = false
