[package]
name = "optd-catalog"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
duckdb = { version = "1.4.0", features = ["bundled"] }
snafu = "0.8.6"
serde_json = "1.0"
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["full", "test-util"] }
futures = "0.3"
