[package]
name = "optd-catalog"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
snafu = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
optd-core = { version = "0.1.0", path = "../core" }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["full", "test-util"] }
futures = "0.3"
