[package]
name = "optd-core"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
bitvec = "1.0.1"
itertools = "0.14.0"
pretty-xmlish = "0.1.13"
snafu = "0.8.6"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "parking_lot",
    "tracing",
] }

tracing = { workspace = true }
arrow-schema = { workspace = true }

[dev-dependencies]
console-subscriber = "0.4.1"
tracing-test = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
