[package]
name = "optd-core"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bitvec = "1.0.1"
itertools = { workspace = true }
pretty-xmlish = "0.1.13"
snafu = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "parking_lot",
    "tracing",
] }

tracing = { workspace = true }
arrow-schema = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
half = "2.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
synopses = { path = "../../synopses" }

[dev-dependencies]
console-subscriber = "0.4.1"
tracing-test = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.8.5"
