[package]
name = "optd-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "arrow-schema/serde"]

[dependencies]
anstyle = "1.0"
arrow-schema = "58.3.0"
fixedbitset = "0.5"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", optional = true }
substrait = "0.63.0"
