[package]
name = "optd-repository"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
dotenvy = { workspace = true }
