[package]
name = "optd-repository"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
derive_more = { version = "2.1.1", features = ["display"] }
