[package]
name = "optd-statistics"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
datafusion = { workspace = true }
parking_lot = "=0.12.5"
glob = "0.3.2"
url = "2.5.4"
async-trait = "0.1.88"
tokio = { workspace = true, features = ["full"] }
duckdb = { features = ["r2d2", "bundled"], version = "1.4.0" }
r2d2 = "0.8.10"
snafu = "0.8.6"
serde_json = "1.0"
futures = "0.3.31"
serde = "1.0.228"
