[package]
name = "optd-sqllogictest"
description = "SQLLogicTest for optd"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
datafusion = { workspace = true }
optd-core = { path = "../../optd/core", version = "0.1" }
optd-datafusion = { path = "../../connectors/datafusion", version = "0.1" }
snafu = { workspace = true }
sqllogictest = "0.29"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = { workspace = true }

[[test]]
name = "harness"
harness = false
