[package]
name = "optd-sqlplannertest"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
datafusion = { workspace = true }
optd-core = { path = "../../optd/core", version = "0.1" }
optd-datafusion = { path = "../../connectors/datafusion", version = "0.1" }
snafu = { workspace = true }
sqlplannertest = "0.4.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.56", features = ["derive"] }
itertools = { workspace = true }

[[test]]
name = "planner_test"
harness = false
